--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -6,8 +6,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    padding-top: 3em;
-    padding-bottom: 3em;
+    padding: 3em 1em;
   }
 
   &__list {
@@ -36,5 +35,21 @@
     gap: 1em;
     font-size: 3em;
     align-items: flex-end;
+  }
+}
+
+@include mobile {
+  .footer {
+    &__container {
+      flex-direction: column;
+      align-items: center;
+    }
+    &__list {
+      gap: 0.5em;
+      text-align: center;
+    }
+    &__social {
+      margin-top: 1em;
+    }
   }
 }
